<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0D0D"
    android:orientation="vertical"
    android:weightSum="8"

    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="84dp"
        android:layout_height="9dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/calculator"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="bottom|end"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="C"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="b"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnMod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="@string/modulus"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRigthShift"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="@string/RightShift"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="@string/Multiply"
            android:textColor="#000000"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/b7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/_7"
            android:textColor="#FFFFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/b8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="8"
            android:textColor="#FFFFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="9"
            android:textColor="#FFFFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLeftShift"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/leftShift"
            android:textColor="#FFFFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="@string/division"
            android:textColor="#000000"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/b4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="4"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/b5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="5"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="6"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bEOR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/ExcusiveOR"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="@string/subtract"
            android:textColor="#000000"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="1"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="2"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="3"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bAnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/And"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="@string/addition"
            android:textColor="#000000"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/b00"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/_00"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/b0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="0"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp"
            tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/bdot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="."
            android:textColor="#FFFFFFFF"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bOr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/Or"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bEqual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#E6B82E"
            android:text="@string/Equal"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />


    </LinearLayout>


</LinearLayout>






